# XBana

./: CMakeLists.txt  XBana.sln
XBana/: Animation.cpp  Animation.h  Component.cpp  Component.h  Game.cpp  Game.h  Level.cpp  Level.h  Object.cpp  Object.h  ResourceManager.cpp  ResourceManager.h  Texture.cpp  Texture.h  Window.cpp  Window.h  XBana.vcxproj  XBana.vcxproj.filters  XTypes.h  resource.h
XBana/Components/: AnimationComponent.cpp  AnimationComponent.h  ComponentType.h  PhysicsComponent.cpp  PhysicsComponent.h  SpriteComponent.cpp  SpriteComponent.h  TransformComponent.cpp  TransformComponent.h
XBana/src/: Application.cpp  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  imageloader.cpp
bin-int/-x64/XBana/: application.nativecodeanalysis.xml  component.nativecodeanalysis.xml  game.nativecodeanalysis.xml  imageloader.nativecodeanalysis.xml  level.nativecodeanalysis.xml  physicscomponent.nativecodeanalysis.xml  shader.nativecodeanalysis.xml  sprite.nativecodeanalysis.xml  spritecomponent.nativecodeanalysis.xml  texture.nativecodeanalysis.xml  vc.nativecodeanalysis.all.xml  vc141.idb  window.nativecodeanalysis.xml
bin-int/-x64/XBana/XBana.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  XBana.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
