cmake_minimum_required(VERSION 3.13)
project(XBanaTest)

set(CMAKE_CXX_STANDARD 14)

include_directories(deps/Box2D/Include)
include_directories(deps/Box2D/Include/Box2D)
include_directories(deps/Box2D/Include/Box2D/Collision)
include_directories(deps/Box2D/Include/Box2D/Collision/Shapes)
include_directories(deps/Box2D/Include/Box2D/Common)
include_directories(deps/Box2D/Include/Box2D/Dynamics)
include_directories(deps/Box2D/Include/Box2D/Dynamics/Contacts)
include_directories(deps/Box2D/Include/Box2D/Dynamics/Joints)
include_directories(deps/Box2D/Include/Box2D/Rope)
include_directories(deps/GLEW)
include_directories(deps/GLEW/Include)
include_directories(deps/GLEW/Include/GL)
include_directories(deps/GLFW)
include_directories(deps/GLFW/include)
include_directories(deps/GLFW/include/GLFW)
include_directories(XBana)
include_directories(XBana/Components)
include_directories(XBana/glm)
include_directories(XBana/glm/detail)
include_directories(XBana/glm/ext)
include_directories(XBana/glm/gtc)
include_directories(XBana/glm/gtx)
include_directories(XBana/glm/simd)
include_directories(XBana/src)

add_executable(XBanaTest
        deps/Box2D/Include/Box2D/Collision/Shapes/b2ChainShape.cpp
        deps/Box2D/Include/Box2D/Collision/Shapes/b2ChainShape.h
        deps/Box2D/Include/Box2D/Collision/Shapes/b2CircleShape.cpp
        deps/Box2D/Include/Box2D/Collision/Shapes/b2CircleShape.h
        deps/Box2D/Include/Box2D/Collision/Shapes/b2EdgeShape.cpp
        deps/Box2D/Include/Box2D/Collision/Shapes/b2EdgeShape.h
        deps/Box2D/Include/Box2D/Collision/Shapes/b2PolygonShape.cpp
        deps/Box2D/Include/Box2D/Collision/Shapes/b2PolygonShape.h
        deps/Box2D/Include/Box2D/Collision/Shapes/b2Shape.h
        deps/Box2D/Include/Box2D/Collision/b2BroadPhase.cpp
        deps/Box2D/Include/Box2D/Collision/b2BroadPhase.h
        deps/Box2D/Include/Box2D/Collision/b2CollideCircle.cpp
        deps/Box2D/Include/Box2D/Collision/b2CollideEdge.cpp
        deps/Box2D/Include/Box2D/Collision/b2CollidePolygon.cpp
        deps/Box2D/Include/Box2D/Collision/b2Collision.cpp
        deps/Box2D/Include/Box2D/Collision/b2Collision.h
        deps/Box2D/Include/Box2D/Collision/b2Distance.cpp
        deps/Box2D/Include/Box2D/Collision/b2Distance.h
        deps/Box2D/Include/Box2D/Collision/b2DynamicTree.cpp
        deps/Box2D/Include/Box2D/Collision/b2DynamicTree.h
        deps/Box2D/Include/Box2D/Collision/b2TimeOfImpact.cpp
        deps/Box2D/Include/Box2D/Collision/b2TimeOfImpact.h
        deps/Box2D/Include/Box2D/Common/b2BlockAllocator.cpp
        deps/Box2D/Include/Box2D/Common/b2BlockAllocator.h
        deps/Box2D/Include/Box2D/Common/b2Draw.cpp
        deps/Box2D/Include/Box2D/Common/b2Draw.h
        deps/Box2D/Include/Box2D/Common/b2GrowableStack.h
        deps/Box2D/Include/Box2D/Common/b2Math.cpp
        deps/Box2D/Include/Box2D/Common/b2Math.h
        deps/Box2D/Include/Box2D/Common/b2Settings.cpp
        deps/Box2D/Include/Box2D/Common/b2Settings.h
        deps/Box2D/Include/Box2D/Common/b2StackAllocator.cpp
        deps/Box2D/Include/Box2D/Common/b2StackAllocator.h
        deps/Box2D/Include/Box2D/Common/b2Timer.cpp
        deps/Box2D/Include/Box2D/Common/b2Timer.h
        deps/Box2D/Include/Box2D/Dynamics/Contacts/b2ChainAndCircleContact.cpp
        deps/Box2D/Include/Box2D/Dynamics/Contacts/b2ChainAndCircleContact.h
        deps/Box2D/Include/Box2D/Dynamics/Contacts/b2ChainAndPolygonContact.cpp
        deps/Box2D/Include/Box2D/Dynamics/Contacts/b2ChainAndPolygonContact.h
        deps/Box2D/Include/Box2D/Dynamics/Contacts/b2CircleContact.cpp
        deps/Box2D/Include/Box2D/Dynamics/Contacts/b2CircleContact.h
        deps/Box2D/Include/Box2D/Dynamics/Contacts/b2Contact.cpp
        deps/Box2D/Include/Box2D/Dynamics/Contacts/b2Contact.h
        deps/Box2D/Include/Box2D/Dynamics/Contacts/b2ContactSolver.cpp
        deps/Box2D/Include/Box2D/Dynamics/Contacts/b2ContactSolver.h
        deps/Box2D/Include/Box2D/Dynamics/Contacts/b2EdgeAndCircleContact.cpp
        deps/Box2D/Include/Box2D/Dynamics/Contacts/b2EdgeAndCircleContact.h
        deps/Box2D/Include/Box2D/Dynamics/Contacts/b2EdgeAndPolygonContact.cpp
        deps/Box2D/Include/Box2D/Dynamics/Contacts/b2EdgeAndPolygonContact.h
        deps/Box2D/Include/Box2D/Dynamics/Contacts/b2PolygonAndCircleContact.cpp
        deps/Box2D/Include/Box2D/Dynamics/Contacts/b2PolygonAndCircleContact.h
        deps/Box2D/Include/Box2D/Dynamics/Contacts/b2PolygonContact.cpp
        deps/Box2D/Include/Box2D/Dynamics/Contacts/b2PolygonContact.h
        deps/Box2D/Include/Box2D/Dynamics/Joints/b2DistanceJoint.cpp
        deps/Box2D/Include/Box2D/Dynamics/Joints/b2DistanceJoint.h
        deps/Box2D/Include/Box2D/Dynamics/Joints/b2FrictionJoint.cpp
        deps/Box2D/Include/Box2D/Dynamics/Joints/b2FrictionJoint.h
        deps/Box2D/Include/Box2D/Dynamics/Joints/b2GearJoint.cpp
        deps/Box2D/Include/Box2D/Dynamics/Joints/b2GearJoint.h
        deps/Box2D/Include/Box2D/Dynamics/Joints/b2Joint.cpp
        deps/Box2D/Include/Box2D/Dynamics/Joints/b2Joint.h
        deps/Box2D/Include/Box2D/Dynamics/Joints/b2MotorJoint.cpp
        deps/Box2D/Include/Box2D/Dynamics/Joints/b2MotorJoint.h
        deps/Box2D/Include/Box2D/Dynamics/Joints/b2MouseJoint.cpp
        deps/Box2D/Include/Box2D/Dynamics/Joints/b2MouseJoint.h
        deps/Box2D/Include/Box2D/Dynamics/Joints/b2PrismaticJoint.cpp
        deps/Box2D/Include/Box2D/Dynamics/Joints/b2PrismaticJoint.h
        deps/Box2D/Include/Box2D/Dynamics/Joints/b2PulleyJoint.cpp
        deps/Box2D/Include/Box2D/Dynamics/Joints/b2PulleyJoint.h
        deps/Box2D/Include/Box2D/Dynamics/Joints/b2RevoluteJoint.cpp
        deps/Box2D/Include/Box2D/Dynamics/Joints/b2RevoluteJoint.h
        deps/Box2D/Include/Box2D/Dynamics/Joints/b2RopeJoint.cpp
        deps/Box2D/Include/Box2D/Dynamics/Joints/b2RopeJoint.h
        deps/Box2D/Include/Box2D/Dynamics/Joints/b2WeldJoint.cpp
        deps/Box2D/Include/Box2D/Dynamics/Joints/b2WeldJoint.h
        deps/Box2D/Include/Box2D/Dynamics/Joints/b2WheelJoint.cpp
        deps/Box2D/Include/Box2D/Dynamics/Joints/b2WheelJoint.h
        deps/Box2D/Include/Box2D/Dynamics/b2Body.cpp
        deps/Box2D/Include/Box2D/Dynamics/b2Body.h
        deps/Box2D/Include/Box2D/Dynamics/b2ContactManager.cpp
        deps/Box2D/Include/Box2D/Dynamics/b2ContactManager.h
        deps/Box2D/Include/Box2D/Dynamics/b2Fixture.cpp
        deps/Box2D/Include/Box2D/Dynamics/b2Fixture.h
        deps/Box2D/Include/Box2D/Dynamics/b2Island.cpp
        deps/Box2D/Include/Box2D/Dynamics/b2Island.h
        deps/Box2D/Include/Box2D/Dynamics/b2TimeStep.h
        deps/Box2D/Include/Box2D/Dynamics/b2World.cpp
        deps/Box2D/Include/Box2D/Dynamics/b2World.h
        deps/Box2D/Include/Box2D/Dynamics/b2WorldCallbacks.cpp
        deps/Box2D/Include/Box2D/Dynamics/b2WorldCallbacks.h
        deps/Box2D/Include/Box2D/Rope/b2Rope.cpp
        deps/Box2D/Include/Box2D/Rope/b2Rope.h
        deps/Box2D/Include/Box2D/Box2D.h
        deps/GLEW/Include/GL/eglew.h
        deps/GLEW/Include/GL/glew.h
        deps/GLEW/Include/GL/glxew.h
        deps/GLEW/Include/GL/wglew.h
        deps/GLFW/include/GLFW/glfw3.h
        deps/GLFW/include/GLFW/glfw3native.h
        XBana/Components/AnimationComponent.cpp
        XBana/Components/AnimationComponent.h
        XBana/Components/ComponentType.h
        XBana/Components/PhysicsComponent.cpp
        XBana/Components/PhysicsComponent.h
        XBana/Components/SpriteComponent.cpp
        XBana/Components/SpriteComponent.h
        XBana/Components/TransformComponent.cpp
        XBana/Components/TransformComponent.h
        XBana/glm/detail/_features.hpp
        XBana/glm/detail/_fixes.hpp
        XBana/glm/detail/_noise.hpp
        XBana/glm/detail/_swizzle.hpp
        XBana/glm/detail/_swizzle_func.hpp
        XBana/glm/detail/_vectorize.hpp
        XBana/glm/detail/compute_common.hpp
        XBana/glm/detail/compute_vector_relational.hpp
        XBana/glm/detail/func_common.inl
        XBana/glm/detail/func_common_simd.inl
        XBana/glm/detail/func_exponential.inl
        XBana/glm/detail/func_exponential_simd.inl
        XBana/glm/detail/func_geometric.inl
        XBana/glm/detail/func_geometric_simd.inl
        XBana/glm/detail/func_integer.inl
        XBana/glm/detail/func_integer_simd.inl
        XBana/glm/detail/func_matrix.inl
        XBana/glm/detail/func_matrix_simd.inl
        XBana/glm/detail/func_packing.inl
        XBana/glm/detail/func_packing_simd.inl
        XBana/glm/detail/func_trigonometric.inl
        XBana/glm/detail/func_trigonometric_simd.inl
        XBana/glm/detail/func_vector_relational.inl
        XBana/glm/detail/func_vector_relational_simd.inl
        XBana/glm/detail/glm.cpp
        XBana/glm/detail/qualifier.hpp
        XBana/glm/detail/setup.hpp
        XBana/glm/detail/type_float.hpp
        XBana/glm/detail/type_half.hpp
        XBana/glm/detail/type_half.inl
        XBana/glm/detail/type_mat2x2.hpp
        XBana/glm/detail/type_mat2x2.inl
        XBana/glm/detail/type_mat2x3.hpp
        XBana/glm/detail/type_mat2x3.inl
        XBana/glm/detail/type_mat2x4.hpp
        XBana/glm/detail/type_mat2x4.inl
        XBana/glm/detail/type_mat3x2.hpp
        XBana/glm/detail/type_mat3x2.inl
        XBana/glm/detail/type_mat3x3.hpp
        XBana/glm/detail/type_mat3x3.inl
        XBana/glm/detail/type_mat3x4.hpp
        XBana/glm/detail/type_mat3x4.inl
        XBana/glm/detail/type_mat4x2.hpp
        XBana/glm/detail/type_mat4x2.inl
        XBana/glm/detail/type_mat4x3.hpp
        XBana/glm/detail/type_mat4x3.inl
        XBana/glm/detail/type_mat4x4.hpp
        XBana/glm/detail/type_mat4x4.inl
        XBana/glm/detail/type_mat4x4_simd.inl
        XBana/glm/detail/type_quat.hpp
        XBana/glm/detail/type_quat.inl
        XBana/glm/detail/type_quat_simd.inl
        XBana/glm/detail/type_vec1.hpp
        XBana/glm/detail/type_vec1.inl
        XBana/glm/detail/type_vec2.hpp
        XBana/glm/detail/type_vec2.inl
        XBana/glm/detail/type_vec3.hpp
        XBana/glm/detail/type_vec3.inl
        XBana/glm/detail/type_vec4.hpp
        XBana/glm/detail/type_vec4.inl
        XBana/glm/detail/type_vec4_simd.inl
        XBana/glm/ext/matrix_clip_space.hpp
        XBana/glm/ext/matrix_clip_space.inl
        XBana/glm/ext/matrix_double2x2.hpp
        XBana/glm/ext/matrix_double2x2_precision.hpp
        XBana/glm/ext/matrix_double2x3.hpp
        XBana/glm/ext/matrix_double2x3_precision.hpp
        XBana/glm/ext/matrix_double2x4.hpp
        XBana/glm/ext/matrix_double2x4_precision.hpp
        XBana/glm/ext/matrix_double3x2.hpp
        XBana/glm/ext/matrix_double3x2_precision.hpp
        XBana/glm/ext/matrix_double3x3.hpp
        XBana/glm/ext/matrix_double3x3_precision.hpp
        XBana/glm/ext/matrix_double3x4.hpp
        XBana/glm/ext/matrix_double3x4_precision.hpp
        XBana/glm/ext/matrix_double4x2.hpp
        XBana/glm/ext/matrix_double4x2_precision.hpp
        XBana/glm/ext/matrix_double4x3.hpp
        XBana/glm/ext/matrix_double4x3_precision.hpp
        XBana/glm/ext/matrix_double4x4.hpp
        XBana/glm/ext/matrix_double4x4_precision.hpp
        XBana/glm/ext/matrix_float2x2.hpp
        XBana/glm/ext/matrix_float2x2_precision.hpp
        XBana/glm/ext/matrix_float2x3.hpp
        XBana/glm/ext/matrix_float2x3_precision.hpp
        XBana/glm/ext/matrix_float2x4.hpp
        XBana/glm/ext/matrix_float2x4_precision.hpp
        XBana/glm/ext/matrix_float3x2.hpp
        XBana/glm/ext/matrix_float3x2_precision.hpp
        XBana/glm/ext/matrix_float3x3.hpp
        XBana/glm/ext/matrix_float3x3_precision.hpp
        XBana/glm/ext/matrix_float3x4.hpp
        XBana/glm/ext/matrix_float3x4_precision.hpp
        XBana/glm/ext/matrix_float4x2.hpp
        XBana/glm/ext/matrix_float4x2_precision.hpp
        XBana/glm/ext/matrix_float4x3.hpp
        XBana/glm/ext/matrix_float4x3_precision.hpp
        XBana/glm/ext/matrix_float4x4.hpp
        XBana/glm/ext/matrix_float4x4_precision.hpp
        XBana/glm/ext/matrix_projection.hpp
        XBana/glm/ext/matrix_projection.inl
        XBana/glm/ext/matrix_relational.hpp
        XBana/glm/ext/matrix_relational.inl
        XBana/glm/ext/matrix_transform.hpp
        XBana/glm/ext/matrix_transform.inl
        XBana/glm/ext/quaternion_common.hpp
        XBana/glm/ext/quaternion_common.inl
        XBana/glm/ext/quaternion_common_simd.inl
        XBana/glm/ext/quaternion_double.hpp
        XBana/glm/ext/quaternion_double_precision.hpp
        XBana/glm/ext/quaternion_exponential.hpp
        XBana/glm/ext/quaternion_exponential.inl
        XBana/glm/ext/quaternion_float.hpp
        XBana/glm/ext/quaternion_float_precision.hpp
        XBana/glm/ext/quaternion_geometric.hpp
        XBana/glm/ext/quaternion_geometric.inl
        XBana/glm/ext/quaternion_relational.hpp
        XBana/glm/ext/quaternion_relational.inl
        XBana/glm/ext/quaternion_transform.hpp
        XBana/glm/ext/quaternion_transform.inl
        XBana/glm/ext/quaternion_trigonometric.hpp
        XBana/glm/ext/quaternion_trigonometric.inl
        XBana/glm/ext/scalar_common.hpp
        XBana/glm/ext/scalar_common.inl
        XBana/glm/ext/scalar_constants.hpp
        XBana/glm/ext/scalar_constants.inl
        XBana/glm/ext/scalar_int_sized.hpp
        XBana/glm/ext/scalar_relational.hpp
        XBana/glm/ext/scalar_relational.inl
        XBana/glm/ext/scalar_uint_sized.hpp
        XBana/glm/ext/scalar_ulp.hpp
        XBana/glm/ext/scalar_ulp.inl
        XBana/glm/ext/vector_bool1.hpp
        XBana/glm/ext/vector_bool1_precision.hpp
        XBana/glm/ext/vector_bool2.hpp
        XBana/glm/ext/vector_bool2_precision.hpp
        XBana/glm/ext/vector_bool3.hpp
        XBana/glm/ext/vector_bool3_precision.hpp
        XBana/glm/ext/vector_bool4.hpp
        XBana/glm/ext/vector_bool4_precision.hpp
        XBana/glm/ext/vector_common.hpp
        XBana/glm/ext/vector_common.inl
        XBana/glm/ext/vector_double1.hpp
        XBana/glm/ext/vector_double1_precision.hpp
        XBana/glm/ext/vector_double2.hpp
        XBana/glm/ext/vector_double2_precision.hpp
        XBana/glm/ext/vector_double3.hpp
        XBana/glm/ext/vector_double3_precision.hpp
        XBana/glm/ext/vector_double4.hpp
        XBana/glm/ext/vector_double4_precision.hpp
        XBana/glm/ext/vector_float1.hpp
        XBana/glm/ext/vector_float1_precision.hpp
        XBana/glm/ext/vector_float2.hpp
        XBana/glm/ext/vector_float2_precision.hpp
        XBana/glm/ext/vector_float3.hpp
        XBana/glm/ext/vector_float3_precision.hpp
        XBana/glm/ext/vector_float4.hpp
        XBana/glm/ext/vector_float4_precision.hpp
        XBana/glm/ext/vector_int1.hpp
        XBana/glm/ext/vector_int1_precision.hpp
        XBana/glm/ext/vector_int2.hpp
        XBana/glm/ext/vector_int2_precision.hpp
        XBana/glm/ext/vector_int3.hpp
        XBana/glm/ext/vector_int3_precision.hpp
        XBana/glm/ext/vector_int4.hpp
        XBana/glm/ext/vector_int4_precision.hpp
        XBana/glm/ext/vector_relational.hpp
        XBana/glm/ext/vector_relational.inl
        XBana/glm/ext/vector_uint1.hpp
        XBana/glm/ext/vector_uint1_precision.hpp
        XBana/glm/ext/vector_uint2.hpp
        XBana/glm/ext/vector_uint2_precision.hpp
        XBana/glm/ext/vector_uint3.hpp
        XBana/glm/ext/vector_uint3_precision.hpp
        XBana/glm/ext/vector_uint4.hpp
        XBana/glm/ext/vector_uint4_precision.hpp
        XBana/glm/ext/vector_ulp.hpp
        XBana/glm/ext/vector_ulp.inl
        XBana/glm/gtc/bitfield.hpp
        XBana/glm/gtc/bitfield.inl
        XBana/glm/gtc/color_space.hpp
        XBana/glm/gtc/color_space.inl
        XBana/glm/gtc/constants.hpp
        XBana/glm/gtc/constants.inl
        XBana/glm/gtc/epsilon.hpp
        XBana/glm/gtc/epsilon.inl
        XBana/glm/gtc/integer.hpp
        XBana/glm/gtc/integer.inl
        XBana/glm/gtc/matrix_access.hpp
        XBana/glm/gtc/matrix_access.inl
        XBana/glm/gtc/matrix_integer.hpp
        XBana/glm/gtc/matrix_inverse.hpp
        XBana/glm/gtc/matrix_inverse.inl
        XBana/glm/gtc/matrix_transform.hpp
        XBana/glm/gtc/matrix_transform.inl
        XBana/glm/gtc/noise.hpp
        XBana/glm/gtc/noise.inl
        XBana/glm/gtc/packing.hpp
        XBana/glm/gtc/packing.inl
        XBana/glm/gtc/quaternion.hpp
        XBana/glm/gtc/quaternion.inl
        XBana/glm/gtc/quaternion_simd.inl
        XBana/glm/gtc/random.hpp
        XBana/glm/gtc/random.inl
        XBana/glm/gtc/reciprocal.hpp
        XBana/glm/gtc/reciprocal.inl
        XBana/glm/gtc/round.hpp
        XBana/glm/gtc/round.inl
        XBana/glm/gtc/type_aligned.hpp
        XBana/glm/gtc/type_precision.hpp
        XBana/glm/gtc/type_precision.inl
        XBana/glm/gtc/type_ptr.hpp
        XBana/glm/gtc/type_ptr.inl
        XBana/glm/gtc/ulp.hpp
        XBana/glm/gtc/ulp.inl
        XBana/glm/gtc/vec1.hpp
        XBana/glm/gtx/associated_min_max.hpp
        XBana/glm/gtx/associated_min_max.inl
        XBana/glm/gtx/bit.hpp
        XBana/glm/gtx/bit.inl
        XBana/glm/gtx/closest_point.hpp
        XBana/glm/gtx/closest_point.inl
        XBana/glm/gtx/color_encoding.hpp
        XBana/glm/gtx/color_encoding.inl
        XBana/glm/gtx/color_space.hpp
        XBana/glm/gtx/color_space.inl
        XBana/glm/gtx/color_space_YCoCg.hpp
        XBana/glm/gtx/color_space_YCoCg.inl
        XBana/glm/gtx/common.hpp
        XBana/glm/gtx/common.inl
        XBana/glm/gtx/compatibility.hpp
        XBana/glm/gtx/compatibility.inl
        XBana/glm/gtx/component_wise.hpp
        XBana/glm/gtx/component_wise.inl
        XBana/glm/gtx/dual_quaternion.hpp
        XBana/glm/gtx/dual_quaternion.inl
        XBana/glm/gtx/easing.hpp
        XBana/glm/gtx/easing.inl
        XBana/glm/gtx/euler_angles.hpp
        XBana/glm/gtx/euler_angles.inl
        XBana/glm/gtx/extend.hpp
        XBana/glm/gtx/extend.inl
        XBana/glm/gtx/extended_min_max.hpp
        XBana/glm/gtx/extended_min_max.inl
        XBana/glm/gtx/exterior_product.hpp
        XBana/glm/gtx/exterior_product.inl
        XBana/glm/gtx/fast_exponential.hpp
        XBana/glm/gtx/fast_exponential.inl
        XBana/glm/gtx/fast_square_root.hpp
        XBana/glm/gtx/fast_square_root.inl
        XBana/glm/gtx/fast_trigonometry.hpp
        XBana/glm/gtx/fast_trigonometry.inl
        XBana/glm/gtx/float_notmalize.inl
        XBana/glm/gtx/functions.hpp
        XBana/glm/gtx/functions.inl
        XBana/glm/gtx/gradient_paint.hpp
        XBana/glm/gtx/gradient_paint.inl
        XBana/glm/gtx/handed_coordinate_space.hpp
        XBana/glm/gtx/handed_coordinate_space.inl
        XBana/glm/gtx/hash.hpp
        XBana/glm/gtx/hash.inl
        XBana/glm/gtx/integer.hpp
        XBana/glm/gtx/integer.inl
        XBana/glm/gtx/intersect.hpp
        XBana/glm/gtx/intersect.inl
        XBana/glm/gtx/io.hpp
        XBana/glm/gtx/io.inl
        XBana/glm/gtx/log_base.hpp
        XBana/glm/gtx/log_base.inl
        XBana/glm/gtx/matrix_cross_product.hpp
        XBana/glm/gtx/matrix_cross_product.inl
        XBana/glm/gtx/matrix_decompose.hpp
        XBana/glm/gtx/matrix_decompose.inl
        XBana/glm/gtx/matrix_factorisation.hpp
        XBana/glm/gtx/matrix_factorisation.inl
        XBana/glm/gtx/matrix_interpolation.hpp
        XBana/glm/gtx/matrix_interpolation.inl
        XBana/glm/gtx/matrix_major_storage.hpp
        XBana/glm/gtx/matrix_major_storage.inl
        XBana/glm/gtx/matrix_operation.hpp
        XBana/glm/gtx/matrix_operation.inl
        XBana/glm/gtx/matrix_query.hpp
        XBana/glm/gtx/matrix_query.inl
        XBana/glm/gtx/matrix_transform_2d.hpp
        XBana/glm/gtx/matrix_transform_2d.inl
        XBana/glm/gtx/mixed_product.hpp
        XBana/glm/gtx/mixed_product.inl
        XBana/glm/gtx/norm.hpp
        XBana/glm/gtx/norm.inl
        XBana/glm/gtx/normal.hpp
        XBana/glm/gtx/normal.inl
        XBana/glm/gtx/normalize_dot.hpp
        XBana/glm/gtx/normalize_dot.inl
        XBana/glm/gtx/number_precision.hpp
        XBana/glm/gtx/number_precision.inl
        XBana/glm/gtx/optimum_pow.hpp
        XBana/glm/gtx/optimum_pow.inl
        XBana/glm/gtx/orthonormalize.hpp
        XBana/glm/gtx/orthonormalize.inl
        XBana/glm/gtx/perpendicular.hpp
        XBana/glm/gtx/perpendicular.inl
        XBana/glm/gtx/polar_coordinates.hpp
        XBana/glm/gtx/polar_coordinates.inl
        XBana/glm/gtx/projection.hpp
        XBana/glm/gtx/projection.inl
        XBana/glm/gtx/quaternion.hpp
        XBana/glm/gtx/quaternion.inl
        XBana/glm/gtx/range.hpp
        XBana/glm/gtx/raw_data.hpp
        XBana/glm/gtx/raw_data.inl
        XBana/glm/gtx/rotate_normalized_axis.hpp
        XBana/glm/gtx/rotate_normalized_axis.inl
        XBana/glm/gtx/rotate_vector.hpp
        XBana/glm/gtx/rotate_vector.inl
        XBana/glm/gtx/scalar_multiplication.hpp
        XBana/glm/gtx/scalar_relational.hpp
        XBana/glm/gtx/scalar_relational.inl
        XBana/glm/gtx/spline.hpp
        XBana/glm/gtx/spline.inl
        XBana/glm/gtx/std_based_type.hpp
        XBana/glm/gtx/std_based_type.inl
        XBana/glm/gtx/string_cast.hpp
        XBana/glm/gtx/string_cast.inl
        XBana/glm/gtx/texture.hpp
        XBana/glm/gtx/texture.inl
        XBana/glm/gtx/transform.hpp
        XBana/glm/gtx/transform.inl
        XBana/glm/gtx/transform2.hpp
        XBana/glm/gtx/transform2.inl
        XBana/glm/gtx/type_aligned.hpp
        XBana/glm/gtx/type_aligned.inl
        XBana/glm/gtx/type_trait.hpp
        XBana/glm/gtx/type_trait.inl
        XBana/glm/gtx/vec_swizzle.hpp
        XBana/glm/gtx/vector_angle.hpp
        XBana/glm/gtx/vector_angle.inl
        XBana/glm/gtx/vector_query.hpp
        XBana/glm/gtx/vector_query.inl
        XBana/glm/gtx/wrap.hpp
        XBana/glm/gtx/wrap.inl
        XBana/glm/simd/common.h
        XBana/glm/simd/exponential.h
        XBana/glm/simd/geometric.h
        XBana/glm/simd/integer.h
        XBana/glm/simd/matrix.h
        XBana/glm/simd/packing.h
        XBana/glm/simd/platform.h
        XBana/glm/simd/trigonometric.h
        XBana/glm/simd/vector_relational.h
        XBana/glm/common.hpp
        XBana/glm/exponential.hpp
        XBana/glm/ext.hpp
        XBana/glm/fwd.hpp
        XBana/glm/geometric.hpp
        XBana/glm/glm.hpp
        XBana/glm/integer.hpp
        XBana/glm/mat2x2.hpp
        XBana/glm/mat2x3.hpp
        XBana/glm/mat2x4.hpp
        XBana/glm/mat3x2.hpp
        XBana/glm/mat3x3.hpp
        XBana/glm/mat3x4.hpp
        XBana/glm/mat4x2.hpp
        XBana/glm/mat4x3.hpp
        XBana/glm/mat4x4.hpp
        XBana/glm/matrix.hpp
        XBana/glm/packing.hpp
        XBana/glm/trigonometric.hpp
        XBana/glm/vec2.hpp
        XBana/glm/vec3.hpp
        XBana/glm/vec4.hpp
        XBana/glm/vector_relational.hpp
        XBana/src/Application.cpp
        XBana/src/imageloader.cpp
        XBana/src/Shader.cpp
        XBana/src/Shader.h
        XBana/src/Sprite.cpp
        XBana/src/Sprite.h
        XBana/Animation.cpp
        XBana/Animation.h
        XBana/Component.cpp
        XBana/Component.h
        XBana/container.jpg
        XBana/for.jpg
        XBana/Game.cpp
        XBana/Game.h
        XBana/Level.cpp
        XBana/Level.h
        XBana/Object.cpp
        XBana/Object.h
        XBana/resource.h
        XBana/ResourceManager.cpp
        XBana/ResourceManager.h
        XBana/stb_image.h
        XBana/terrain.png
        XBana/Texture.cpp
        XBana/Texture.h
        XBana/Window.cpp
        XBana/Window.h
        XBana/XTypes.h)
